// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CRLF.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
$nice-blue: #5B83AD;
$light-blue: $nice-blue + #111;

// Comment 1
/*
 * Comment 2
 */
#header {
    // Comment 3
    /*
     * Comment 4
     */
    color: @light-blue;
}

@media only screen and (max-width: 600px) {
    // Comment 1
    /*
     * Comment 5
     */
    body {
        background-color: lightblue; // Comment 6
        color: red; /* Comment 7 */
    }
}

@mixin create-rules($padding) {
    //
    // Comment 8
    //
    .abc {
        padding: $padding;
    }
    /**
     * Comment 9
     */
    .def {
        padding: $padding;
    }
}

=====================================output=====================================
$nice-blue: #5b83ad;
$light-blue: $nice-blue + #111;

// Comment 1
/*
 * Comment 2
 */
#header {
  // Comment 3
  /*
     * Comment 4
     */
  color: @light-blue;
}

@media only screen and (max-width: 600px) {
  // Comment 1
  /*
     * Comment 5
     */
  body {
    background-color: lightblue; // Comment 6
    color: red; /* Comment 7 */
  }
}

@mixin create-rules($padding) {
  //
  // Comment 8
  //
  .abc {
    padding: $padding;
  }
  /**
     * Comment 9
     */
  .def {
    padding: $padding;
  }
}

================================================================================
`;

exports[`at-rules.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@charset "utf-8"; /* comment 1 */

@import /* comment 2 */ url("fineprint.css") /* comment 3 */ print /* comment 4 */; /* comment 5 */
@import /* comment 6 */ url("bluish.css") /* comment 7 */ projection /* comment 8 */, /* comment 9 */ tv /* comment 10 */;
/* comment 11 */ @import /* comment 12 */
    /* comment 13 */ url("bluish.css") /* comment 14 */
    /* comment 15 */ projection /* comment 16 */,
    /* comment 17 */ tv /* comment 18 */; /* comment 19 */
/* comment 20 */
@import/* comment 21 */url("bluish.css")/* comment 22 */projection/* comment 23 */,/* comment 24 */tv/* comment 25 */;
@import /* comment 26 */'custom.css'/* comment 27 */;/* comment 28 */
@import /* comment 29 */ url('landscape.css') /* comment 30 */ screen /* comment 31 */ and /* comment 32 */ (/* comment 33 */orientation/* comment 34 */:/* comment 35 */landscape/* comment 36 */)/* comment 37 */;

@namespace /* comment 38 */ url(http://www.w3.org/1999/xhtml) /* comment 39 */ ;
@namespace /* comment 40 */ svg /* comment 41 */ url(http://www.w3.org/2000/svg) /* comment 42 */;

@keyframes /* comment 43 */ slidein /* comment 44 */ {}

/* comment 45 */ @font-feature-values /* comment 46 */ Font Two /* comment 47 */ { /* comment 48 */
    /* comment 49 */ @styleset /* comment 50 */ { /* comment 51 */
        nice-style: 4;
    /* comment 52 */ } /* comment 53 */
/* comment 54 */ }  /* comment 55 */

/* comment 56 */ @counter-style /* comment 57 */ thumbs /* comment 58 */ {}

/* comment 59 */ @viewport /* comment 60 */ {}

@page /* comment 61 */ {}
@page /* comment 62 */ :first /* comment 63 */ {}
@page /* comment 64 */ vertical /* comment 65 */ {}

/* comment 66 */ @media /* comment 67 */ print /* comment 68 */ {}
@media /* comment 69 */ screen /* comment 70 */ , /* comment 71 */ print /* comment 72 */ {} /* comment 73 */
@media /* comment 74 */ only /* comment 75 */ screen /* comment 76 */ and /* comment 77 */ ( /* comment 78 */ min-width /* comment 79 */ : /* comment 80 */ 320px /* comment 81 */ ) /* comment 82 */ and /* comment 83 */ ( /* comment 84 */ max-width /* comment 85 */ : /* comment 86 */ 480px /* comment 87 */ ) /* comment 88 */ and /* comment 89 */ ( /* comment 90 */ resolution /* comment 91 */ : /* comment 92 */ 150dpi /* comment 93 */ ) /* comment 94 */ {}
@media/* comment 95 */only/* comment 96 */screen/* comment 97 */and/* comment 98 */(/* comment 99 */min-width/* comment 100 */:/* comment 101 */320px/* comment 102 */)/* comment 103 */and/* comment 104 */(/* comment 105 */max-width/* comment 106 */:/* comment 107 */480px/* comment 108 */)/* comment 109 */and/* comment 110 */(/* comment 111 */resolution/* comment 112 */:/* comment 113 */150dpi/* comment 114 */)/* comment 115 */{}
/* comment 116 */@media/* comment 117 */
    /* comment 118 */only/* comment 119 */
    /* comment 120 */screen/* comment 121 */
    /* comment 122 */and/* comment 123 */
    /* comment 124 */(/* comment 125 */
    /* comment 126 */min-width/* comment 127 */
    /* comment 128 */:/* comment 129 */
    /* comment 130 */320px/* comment 131 */
    /* comment 132 */)/* comment 133 */
    /* comment 134 */and/* comment 135 */
    /* comment 136 */(/* comment 137 */
    /* comment 138 */max-width/* comment 139 */
    /* comment 140 */:/* comment 141 */
    /* comment 142 */480px/* comment 143 */
    /* comment 144 */)/* comment 145 */
    /* comment 146 */and/* comment 147 */
    /* comment 148 */(/* comment 149 */
    /* comment 150 */resolution/* comment 151 */
    /* comment 152 */:/* comment 153 */
    /* comment 154 */150dpi/* comment 155 */
    /* comment 156 */)/* comment 157 */
    /* comment 158 */{}/* comment 159 */

@supports /* comment 160 */ ( /* comment 161 */ display /* comment 162 */ : /* comment 163 */ flex /* comment 164 */ ) /* comment 165 */ {}
@supports /* comment 166 */ not /* comment 167 */ ( /* comment 168 */ display /* comment 169 */ : /* comment 170 */ flex /* comment 171 */ ) /* comment 172 */ {}
@supports /* comment 173 */ (/* comment 174 */ display /* comment 175 */ : /* comment 176 */ table-cell /* comment 177 */ ) /* comment 178 */ and /* comment 179 */ ( /* comment 180 */ display /* comment 181 */ : /* comment 182 */ list-item /* comment 183 */ ) /* comment 184 */ and /* comment 185 */ ( /* comment 186 */display /* comment 187 */ : /* comment 188 */ run-in /* comment 189 */ ) /* comment 190 */ {}
@supports /* comment 191 */ (/* comment 192 */ --foo /* comment 193 */ : /* comment 194 */ green /* comment 195 */ ) /* comment 196 */ {}

/* comment 197 */ @supports /* comment 198 */ ( /* comment 199 */ display /* comment 200 */ : /* comment 201 */ flex /* comment 202 */ ) /* comment 203 */ {
    /* comment 204 */ @media /* comment 205 */ screen /* comment 206 */ and /* comment 207 */ ( /* comment 208 */ min-width /* comment 209 */ : /* comment 210 */ 900px /* comment 211 */ ) /* comment 212 */ {
    /* comment 213 */ } /* comment 214 */
/* comment 215 */ } /* comment 216 */


=====================================output=====================================
@charset "utf-8"; /* comment 1 */

@import /* comment 2 */ url("fineprint.css") /* comment 3 */ print
  /* comment 4 */; /* comment 5 */
@import /* comment 6 */ url("bluish.css") /* comment 7 */ projection
    /* comment 8 */,
  /* comment 9 */ tv /* comment 10 */;
/* comment 11 */
@import /* comment 12 */ /* comment 13 */ url("bluish.css") /* comment 14 */
    /* comment 15 */ projection /* comment 16 */,
  /* comment 17 */ tv /* comment 18 */; /* comment 19 */
/* comment 20 */
@import /* comment 21 */ url("bluish.css") /* comment 22 */ projection
    /* comment 23 */,
  /* comment 24 */ tv /* comment 25 */;
@import /* comment 26 */ "custom.css" /* comment 27 */; /* comment 28 */
@import /* comment 29 */ url("landscape.css") /* comment 30 */ screen
  /* comment 31 */ and /* comment 32 */
  (
    /* comment 33 */ orientation /* comment 34 */: /* comment 35 */ landscape
      /* comment 36 */
  )
  /* comment 37 */;

@namespace /* comment 38 */ url(http://www.w3.org/1999/xhtml) /* comment 39 */;
@namespace /* comment 40 */ svg /* comment 41 */ url(http://www.w3.org/2000/svg) /* comment 42 */;

@keyframes /* comment 43 */ slidein /* comment 44 */ {
}

/* comment 45 */
@font-feature-values /* comment 46 */ Font Two /* comment 47 */ {
  /* comment 48 */
  /* comment 49 */
  @styleset /* comment 50 */ {
    /* comment 51 */
    nice-style: 4;
    /* comment 52 */
  } /* comment 53 */
  /* comment 54 */
} /* comment 55 */

/* comment 56 */
@counter-style /* comment 57 */ thumbs /* comment 58 */ {
}

/* comment 59 */
@viewport /* comment 60 */ {
}

@page /* comment 61 */ {
}
@page /* comment 62 */ :first /* comment 63 */ {
}
@page /* comment 64 */ vertical /* comment 65 */ {
}

/* comment 66 */
@media /* comment 67 */ print /* comment 68 */ {
}
@media /* comment 69 */ screen /* comment 70 */,
  /* comment 71 */ print /* comment 72 */ {
} /* comment 73 */
@media /* comment 74 */ only /* comment 75 */ screen /* comment 76 */ and /* comment 77 */ (/* comment 78 */ min-width /* comment 79 */: /* comment 80 */ 320px /* comment 81 */) /* comment 82 */ and /* comment 83 */ (/* comment 84 */ max-width /* comment 85 */: /* comment 86 */ 480px /* comment 87 */) /* comment 88 */ and /* comment 89 */ (/* comment 90 */ resolution /* comment 91 */: /* comment 92 */ 150dpi /* comment 93 */) /* comment 94 */ {
}
@media /* comment 95 */only/* comment 96 */screen/* comment 97 */and/* comment 98 */(/* comment 99 */min-width/* comment 100 */:/* comment 101 */320px/* comment 102 */) /* comment 103 */and/* comment 104 */(/* comment 105 */max-width/* comment 106 */:/* comment 107 */480px/* comment 108 */) /* comment 109 */and/* comment 110 */(/* comment 111 */resolution/* comment 112 */:/* comment 113 */150dpi/* comment 114 */) /* comment 115 */ {
}
/* comment 116 */
@media /* comment 117 */ /* comment 118 */only/* comment 119 */ /* comment 120 */screen/* comment 121 */ /* comment 122 */and/* comment 123 */ /* comment 124 */(/* comment 125 */
    /* comment 126 */min-width/* comment 127 */
    /* comment 128 */:/* comment 129 */
    /* comment 130 */320px/* comment 131 */
    /* comment 132 */) /* comment 133 */ /* comment 134 */and/* comment 135 */ /* comment 136 */(/* comment 137 */
    /* comment 138 */max-width/* comment 139 */
    /* comment 140 */:/* comment 141 */
    /* comment 142 */480px/* comment 143 */
    /* comment 144 */) /* comment 145 */ /* comment 146 */and/* comment 147 */ /* comment 148 */(/* comment 149 */
    /* comment 150 */resolution/* comment 151 */
    /* comment 152 */:/* comment 153 */
    /* comment 154 */150dpi/* comment 155 */
    /* comment 156 */) /* comment 157 */ /* comment 158 */ {
} /* comment 159 */

@supports /* comment 160 */
  (
    /* comment 161 */ display /* comment 162 */: /* comment 163 */ flex
      /* comment 164 */
  )
  /* comment 165 */ {
}
@supports /* comment 166 */ not /* comment 167 */
  (
    /* comment 168 */ display /* comment 169 */: /* comment 170 */ flex
      /* comment 171 */
  )
  /* comment 172 */ {
}
@supports /* comment 173 */
  (
    /* comment 174 */ display /* comment 175 */: /* comment 176 */ table-cell
      /* comment 177 */
  )
  /* comment 178 */ and /* comment 179 */
  (
    /* comment 180 */ display /* comment 181 */: /* comment 182 */ list-item
      /* comment 183 */
  )
  /* comment 184 */ and /* comment 185 */
  (
    /* comment 186 */ display /* comment 187 */: /* comment 188 */ run-in
      /* comment 189 */
  )
  /* comment 190 */ {
}
@supports /* comment 191 */
  (
    /* comment 192 */ --foo /* comment 193 */: /* comment 194 */ green
      /* comment 195 */
  )
  /* comment 196 */ {
}

/* comment 197 */
@supports /* comment 198 */
  (
    /* comment 199 */ display /* comment 200 */: /* comment 201 */ flex
      /* comment 202 */
  )
  /* comment 203 */ {
  /* comment 204 */
  @media /* comment 205 */ screen /* comment 206 */ and /* comment 207 */ (/* comment 208 */ min-width /* comment 209 */: /* comment 210 */ 900px /* comment 211 */) /* comment 212 */ {
    /* comment 213 */
  } /* comment 214 */
  /* comment 215 */
} /* comment 216 */

================================================================================
`;

exports[`block.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Animation definitions cannot cross the shadow boundary,
// and thus need to be loaded directly into the atom-text-editor scope.
/* Kikoo */
/**
 * Kikoo
 */

=====================================output=====================================
// Animation definitions cannot cross the shadow boundary,
// and thus need to be loaded directly into the atom-text-editor scope.
/* Kikoo */
/**
 * Kikoo
 */

================================================================================
`;

exports[`bug.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@font-face  {
  src: url(if(
    $bootstrap-sass-asset-helper,
    twbs-font-path('#{$icon-font-path}#{$icon-font-name}.eot'),
    '#{$icon-font-path}#{$icon-font-name}.eot'
  ));
}

// Catchall baseclass
/* Catchall baseclass */
.glyphicon {
}

=====================================output=====================================
@font-face {
  src: url(if(
    $bootstrap-sass-asset-helper,
    twbs-font-path("#{$icon-font-path}#{$icon-font-name}.eot"),
    "#{$icon-font-path}#{$icon-font-name}.eot"
  ));
}

// Catchall baseclass
/* Catchall baseclass */
.glyphicon {
}

================================================================================
`;

exports[`declaration.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a {
    /* comment 1 */
    /* comment 2 */ padding /* comment 3 */ : /* comment 4 */ 10px /* comment 5 */ 10px /* comment 6 */; /* comment 7 */
    /* comment 8 */
    transform: translate(/* comment 9 */ 10px /* comment 10 */);
    color: /* comment 11 */ red /* comment 12 */ !important /* comment 13 */ ; /* comment 14 */
    /* comment 15 */
}

@font-face {
    font-family: "Prettier";
    src: /* comment 16 */ local(/* comment 17 */ "Prettier" /* comment 18 */), /* comment 19 */
        /* comment 20 */ url("http://prettier.com/font.woff") /* comment 21 */ ; /* comment 22 */
}

.foo {/* comment 23 */color/* comment 24 */:/* comment 25 */blue/* comment 26 */;/* comment 27 */transform/* comment 28 */:/* comment 29 */translate(/* comment 30 */10px/* comment 31 */)/* comment 32 */;/* comment 33 */}
.foo { /* comment 34 */ color /* comment 35 */ : /* comment 36 */ blue /* comment 37 */ ; /* comment 38 */ transform /* comment 39 */ : /* comment 40 */ translate( /* comment 41 */ 10px /* comment 42 */ ) /* comment 43 */ ; /* comment 44 */ }
.foo {
    /* comment 45 */
    /* comment 46 */ color  /* comment 47 */
    /* comment 48 */
    /* comment 49 */ :  /* comment 50 */
    /* comment 51 */
    /* comment 52 */ blue  /* comment 53 */
    /* comment 54 */
    /* comment 55 */ ;  /* comment 56 */
    /* comment 57 */
    /* comment 58 */ transform  /* comment 59 */
    /* comment 60 */
    /* comment 61 */ : /* comment 62 */
    /* comment 63 */
    /* comment 64 */ translate(  /* comment 65 */
        /* comment 66 */
        /* comment 67 */ 10px  /* comment 68 */
        /* comment 69 */
    /* comment 70 */ ) /* comment 71 */
    /* comment 72 */
    /* comment 73 */ ;  /* comment 74 */
    /* comment 75 */
}

body {/* comment 76 */}
body { /* comment 77 */ }
body
{
    /* comment 78 */
}
body
{
    /* comment 79 */
}
body
{

    /* comment 80 */

}

.tab-bar {
    .tab {} /* comment 81 */
}

.selector {
    /* comment 82 */
    position: absolute;

    /* comment 83 */
    display: inline-block;

    /* comment 84 */
    background: #000;
}

=====================================output=====================================
a {
  /* comment 1 */
  /* comment 2 */
  padding/* comment 3 */ : /* comment 4 */ 10px /* comment 5 */ 10px
    /* comment 6 */; /* comment 7 */
  /* comment 8 */
  transform: translate(/* comment 9 */ 10px /* comment 10 */);
  color: /* comment 11 */ red /* comment 12 */ !important /* comment 13 */ ; /* comment 14 */
  /* comment 15 */
}

@font-face {
  font-family: "Prettier";
  src: /* comment 16 */ local(/* comment 17 */ "Prettier" /* comment 18 */),
    /* comment 19 */ /* comment 20 */ url("http://prettier.com/font.woff")
      /* comment 21 */; /* comment 22 */
}

.foo {
  /* comment 23 */
  color/* comment 24 */:/* comment 25 */ blue /* comment 26 */; /* comment 27 */
  transform/* comment 28 */:/* comment 29 */ translate(
      /* comment 30 */ 10px /* comment 31 */
    )
    /* comment 32 */; /* comment 33 */
}
.foo {
  /* comment 34 */
  color/* comment 35 */ : /* comment 36 */ blue /* comment 37 */; /* comment 38 */
  transform/* comment 39 */ : /* comment 40 */ translate(
      /* comment 41 */ 10px /* comment 42 */
    )
    /* comment 43 */; /* comment 44 */
}
.foo {
  /* comment 45 */
  /* comment 46 */
  color/* comment 47 */
    /* comment 48 */
    /* comment 49 */ :  /* comment 50 */
    /* comment 51 */
    /* comment 52 */ blue
    /* comment 53 */ /* comment 54 */ /* comment 55 */; /* comment 56 */
  /* comment 57 */
  /* comment 58 */
  transform/* comment 59 */
    /* comment 60 */
    /* comment 61 */ : /* comment 62 */
    /* comment 63 */
    /* comment 64 */ translate(
      /* comment 65 */ /* comment 66 */ /* comment 67 */ 10px /* comment 68 */
        /* comment 69 */ /* comment 70 */
    )
    /* comment 71 */ /* comment 72 */ /* comment 73 */; /* comment 74 */
  /* comment 75 */
}

body {
  /* comment 76 */
}
body {
  /* comment 77 */
}
body {
  /* comment 78 */
}
body {
  /* comment 79 */
}
body {
  /* comment 80 */
}

.tab-bar {
  .tab {
  } /* comment 81 */
}

.selector {
  /* comment 82 */
  position: absolute;

  /* comment 83 */
  display: inline-block;

  /* comment 84 */
  background: #000;
}

================================================================================
`;

exports[`if-eslit-at-rule-decloration.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@function _normalize-include($section) {
// Check if $section is in the $include list.
  @if index($_normalize-include, $section) {
    @return true;
  }
// If $include is set to (all), make sure $section is not in $exclude.
  @else if not index($_normalize-exclude, $section) and index($_normalize-include, all) {
    @return true;
  }
  @return false;
}

=====================================output=====================================
@function _normalize-include($section) {
  // Check if $section is in the $include list.
  @if index($_normalize-include, $section) {
    @return true;
  }
  // If $include is set to (all), make sure $section is not in $exclude.
  @else if not
    index($_normalize-exclude, $section) and
    index($_normalize-include, all)
  {
    @return true;
  }
  @return false;
}

================================================================================
`;

exports[`lists.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
$my-list:
  'foo', // Foo
  'bar'; // Bar

$my-list2:
  a // a
  b
  c;

=====================================output=====================================
$my-list: "foo",
  // Foo
    "bar"; // Bar

$my-list2: a // a
  b c;

================================================================================
`;

exports[`maps.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
$my-map: (
  'foo': 1, // Foo
  'bar': 2, // Bar
);

=====================================output=====================================
$my-map: (
  "foo": 1,
  // Foo
    "bar": 2,
  // Bar
);

================================================================================
`;

exports[`places.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
div {
  // a

  margin-left: -@leftMargin; // b
} // c

// d
div {}

=====================================output=====================================
div {
  // a

  margin-left: -@leftMargin; // b
} // c

// d
div {
}

================================================================================
`;

exports[`prettier-ignore.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// prettier-ignore
@blue:  blue;
@black: darkgray;

foo {
  /* prettier-ignore */
  thing:     foo;
  -ms-thing: foo;
}

=====================================output=====================================
// prettier-ignore
@blue:  blue;
@black: darkgray;

foo {
  /* prettier-ignore */
  thing:     foo;
  -ms-thing: foo;
}

================================================================================
`;

exports[`selectors.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.powerPathNavigator .helm button.pressedButton, // comment 1
.powerPathNavigator .helm button:active:not(.disabledButton),
.powerPathNavigator table.powerPathInfo th:active,
.powerPathNavigator table.powerPathInfo th:active + th:last-child {
}

// comment 2
.powerPathNavigator .helm button.pressedButton,
.powerPathNavigator .helm button:active:not(.disabledButton) {
}

.foo,
// comment 3
.bar {
  display: block;
}

.field
  {
  &[data-field-id="1"], // comment 4
  &[data-field-id="2"], // comment 5
  &[data-field-id="3"], // comment 6
  {
    background: green;
  }
}

// comment 7
.field
// comment 8
{ // comment 9
  // comment 10
  &[data-field-id="1"], // comment 11
  // comment 12
  &[data-field-id="2"] // comment 13
  // comment 14
  , // comment 15
  // comment 16
  &[data-field-id="3"], // comment 17
  // comment 18
  { // comment 19
    // comment 20
    background: green;
    // comment 21
  } // comment 22
  // comment 23
}
// comment 24

.foo
// comment 25
.bar
// comment 26
{}

.foo
// comment 27
+
// comment 28
.bar
// comment 29
{}

=====================================output=====================================
.powerPathNavigator .helm button.pressedButton, // comment 1
.powerPathNavigator .helm button:active:not(.disabledButton),
.powerPathNavigator table.powerPathInfo th:active,
.powerPathNavigator table.powerPathInfo th:active + th:last-child {
}

// comment 2
.powerPathNavigator .helm button.pressedButton,
.powerPathNavigator .helm button:active:not(.disabledButton) {
}

.foo,
// comment 3
.bar {
  display: block;
}

.field {
  &[data-field-id="1"], // comment 4
  &[data-field-id="2"], // comment 5
  &[data-field-id="3"], // comment 6
  {
    background: green;
  }
}

// comment 7
.field
// comment 8
{
  // comment 9
  // comment 10
  &[data-field-id="1"], // comment 11
  // comment 12
  &[data-field-id="2"] // comment 13
  // comment 14
  , // comment 15
  // comment 16
  &[data-field-id="3"], // comment 17
  // comment 18
  {
    // comment 19
    // comment 20
    background: green;
    // comment 21
  } // comment 22
  // comment 23
}
// comment 24

.foo
// comment 25
.bar
// comment 26
{
}

.foo
// comment 27
+
// comment 28
.bar
// comment 29
{
}

================================================================================
`;

exports[`source-map.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.foo {
    color: red;
}

/*# sourceMappingURL=file.css.map */

=====================================output=====================================
.foo {
  color: red;
}

/*# sourceMappingURL=file.css.map */

================================================================================
`;

exports[`trailing_star_slash.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@media (max-width: 1) {}
a {
  // element.style */
}

=====================================output=====================================
@media (max-width: 1) {
}
a {
  // element.style */
}

================================================================================
`;

exports[`types.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* This is a basic comment */

/* ==========================================================================
   This is a Section Comment
   ========================================================================== */

/*
   This is a sub-section comment
   ========================================================================== */

/**
 * Short description using Doxygen-style comment format
 *
 * The first sentence of the long description starts here and continues on this
 * line for a while finally concluding here at the end of this paragraph.
 *
 * The long description is ideal for more detailed explanations and
 * documentation. It can include example HTML, URLs, or any other information
 * that is deemed necessary or useful.
 *
 * @tag This is a tag named 'tag'
 *
 * TODO: This is a todo statement that describes an atomic task to be completed
 *   at a later date. It wraps after 80 characters and following lines are
 *   indented by 2 spaces.
 */

/**
 * TODO:
 *
 * => Write some code
 * => Make some lists
 *
 */

/*
span {
  color: blue;
  font-size: 1.5em;
}
*/

/*
<small class=tooltip><span>Lorem ipsum dolor</span></small>
*/

=====================================output=====================================
/* This is a basic comment */

/* ==========================================================================
   This is a Section Comment
   ========================================================================== */

/*
   This is a sub-section comment
   ========================================================================== */

/**
 * Short description using Doxygen-style comment format
 *
 * The first sentence of the long description starts here and continues on this
 * line for a while finally concluding here at the end of this paragraph.
 *
 * The long description is ideal for more detailed explanations and
 * documentation. It can include example HTML, URLs, or any other information
 * that is deemed necessary or useful.
 *
 * @tag This is a tag named 'tag'
 *
 * TODO: This is a todo statement that describes an atomic task to be completed
 *   at a later date. It wraps after 80 characters and following lines are
 *   indented by 2 spaces.
 */

/**
 * TODO:
 *
 * => Write some code
 * => Make some lists
 *
 */

/*
span {
  color: blue;
  font-size: 1.5em;
}
*/

/*
<small class=tooltip><span>Lorem ipsum dolor</span></small>
*/

================================================================================
`;

exports[`variable-declaration.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
$var: /* comment 1 */ all /* comment 2 */ !default /* comment 3 */ ; /* comment 4 */

@mixin text-color {
  /* comment 5 */
  /* comment 6 */ $text-color /* comment 7 */ : /* comment 8 */ red /* comment 9 */ !default /* comment 10 */ ; /* comment 11 */
  /* comment 12 */
  color: $text-color;
}

.error {
  /* comment 13 */
  /* comment 14 */ $text-color /* comment 15 */ : /* comment 16 */ green /* comment 17 */ !global /* comment 18 */ ; /* comment 19 */
  /* comment 20 */
}

=====================================output=====================================
$var: /* comment 1 */ all /* comment 2 */ !default /* comment 3 */; /* comment 4 */

@mixin text-color {
  /* comment 5 */
  /* comment 6 */
  $text-color/* comment 7 */ : /* comment 8 */ red /* comment 9 */ !default /* comment 10 */; /* comment 11 */
  /* comment 12 */
  color: $text-color;
}

.error {
  /* comment 13 */
  /* comment 14 */
  $text-color/* comment 15 */ : /* comment 16 */ green /* comment 17 */ !global /* comment 18 */; /* comment 19 */
  /* comment 20 */
}

================================================================================
`;
